[tool.poetry]
name = "bazzite-docs"
version = "0.1.0"
description = ""
authors = ["Zeglius <33781398+Zeglius@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.0"
requests = "^2.32.3"
mkdocs-material = "^9.5.32"
mkdocs-with-pdf = "^0.9.3"
mkdocs-static-i18n = {extras = ["material"], version = "^1.2.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
