[tool.poetry]
name = "bazzite-docs"
version = "0.1.0"
description = ""
authors = ["Zeglius <33781398+Zeglius@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.0"
requests = "^2.32.3"
mkdocs-material = {extras = ["imaging"], version = "^9.5.33"}
mkdocs-static-i18n = {extras = ["material"], version = "^1.2.3"}
mdx-truly-sane-lists = "^1.3"
mkdocs-git-revision-date-localized-plugin = "^1.2.7"
mkdocs-git-committers-plugin-2 = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
